# Credit-Card-Default-Prediction

./: Dockerfile  README.md  main.py  predict-default.dockerfile  project_instruction.md  pyproject.toml
notebook/: notebook.ipynb  test_endpoint.ipynb
src/: predict.py  train.py
