[project]
name = "credit-card-default-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
    "ydata-profiling>=4.17.0",
]
